<resources>
    <string name="app_name">fangte</string>
    <string name="main_text_1">服务器IP:</string>
    <string name="main_text_1_ts">120.238.78.213</string>
    <string name="main_text_2">服务器端口:</string>
    <string name="main_text_2_ts">10443</string>
    <string name="main_text_3">会议码:</string>
    <string name="main_text_3_ts">room</string>
    <string name="main_text_4">用户名字:</string>
    <string name="main_text_4_ts">zhouwq</string>
    <string name="main_text1_hint">请输入服务器IP地址</string>
    <string name="main_text2_hint">请输入服务器端口</string>
    <string name="main_text3_hint">请输入要加入的会议码</string>
    <string name="main_text4_hint">请输入用户名字</string>
    <string name="main_btn_meet_create">创建会议</string>
    <string name="main_btn_meet_join">加入会议</string>
    <string name="main_try_again">The application is missing permissions. It might not work correctly. Do you want to try again?</string>
    <string name="main_yes">Yes</string>
    <string name="main_no">No</string>

    <string name="video_edit_hint">请输入需要传输的数据</string>
    <string name="video_btn_send">send</string>
    <string name="video_btn_mic">mic</string>
    <string name="video_btn_mic_mute">mic mute</string>
    <string name="video_btn_mic_unmute">mic unmute</string>
    <string name="video_btn_speaker">speaker</string>
    <string name="video_btn_speaker_on">speaker on</string>
    <string name="video_btn_speaker_off">speaker off</string>
    <string name="video_btn_camera_on">camera on</string>
    <string name="video_btn_camera_off">camera off</string>
    <string name="video_btn_camera_switch">switch camera</string>
    <string name="video_btn_screen_on">screen on</string>
    <string name="video_btn_screen_off">screen off</string>
</resources>
