<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/main_text_1">
        </TextView>

        <EditText
            android:id="@+id/edit_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:autofillHints="@string/main_text1_hint"
            tools:ignore="LabelFor,TextFields">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/main_text_2">
        </TextView>

        <EditText
            android:id="@+id/edit_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:autofillHints="@string/main_text2_hint"
            tools:ignore="LabelFor,TextFields">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/main_text_3">
        </TextView>

        <EditText
            android:id="@+id/edit_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:autofillHints="@string/main_text3_hint"
            tools:ignore="LabelFor,TextFields">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/main_text_4">
        </TextView>

        <EditText
            android:id="@+id/edit_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:autofillHints="@string/main_text4_hint"
            tools:ignore="LabelFor,TextFields">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/btn_join_meet"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_btn_meet_join"
            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>
</LinearLayout>